--- a/properties.cfg
+++ b/properties.cfg
@@ -1,5 +1,5 @@
-#Game Settings written by com.jme.app.BaseGame$BaseGameSettings at Fri Nov 05 21:52:15 EDT 2010
-#Fri Nov 05 21:52:15 EDT 2010
+#Game Settings written by com.jme.app.BaseGame$BaseGameSettings at Tue Nov 16 14:07:45 EST 2010
+#Tue Nov 16 14:07:45 EST 2010
 FREQ=-1
 RENDERER=LWJGL
 WIDTH=800
